--- a/html/people.html
+++ b/html/people.html
@@ -146,30 +146,7 @@ Jemez Pueblo, where she is farming on her family's plots.</m>
 <table class="staff">
 <tr>
 <td><img src="./images/people/Leslie.jpg" />
-<bold>Leslie Cumiford</bold> (Executive Director) earned her PhD in Industrial Engineering from 
-the University of Central Florida, followed by a stint as Assistant Professor at the University of 
-Alabama in Huntsville, where she served as teaching and research faculty and Director of the 
-Intelligent Systems Laboratory of the Center for Robotics. In 1995, Dr. Cumiford accepted a position 
-with Sandia National Laboratories as Principle Member of the Technical Staff, where she worked for 
-eleven years as a program manager and researcher <m class="more" id="Leslie"> introducing new technologies for design and 
-manufacturing and expanding the state of the art in artificial intelligence technologies. She spun 
-out a high-tech company, Silverweb Production Technologies, and served as President of the New Mexico 
-Entrepreneurs Association. As a licensed Professional Engineer, she has been a consultant to a number 
-of companies. Leslie has an extensive list of publications, professional service, invited talks and 
-awards. Five years ago, Leslie stepped away from the high-tech world and founded The New Mexico 
-Breeze, a weekly newspaper which was devoted to the Christian worldview, truth in media, exposure 
-of government corruption, celebrating New Mexico culture and preserving the American way of life. 
-The newspaper arose from her volunteer work over a number of years of advocating for families and 
-family issues as founder and president of a New Mexico nonprofit organization. A Christian for over 
-35 years, Dr. Cumiford teaches a weekly program on Christian radio (AM 730) and is a founder of 
-Biblical Worldview Fellowship in Albuquerque. She has served as deacon, mentor, Sunday school teacher, 
-food pantry coordinator, and church coordinator for a number of multi-church endeavors, including the 
-Asbury Pie Café. In 2011 she founded the Leadership Academy, an intensive summer Christian worldview 
-program for high school and college students, and she serves as President of the New Mexico affiliate 
-of the national Centurions program of the Chuck Colson Center for Christian Worldview. She and her 
-husband Jim have two grown daughters and a son in college. Their remaining “child” at home is a large 
-Akita.</m>
-[<a class="show_more" id="Leslie">more</a>]</td>
+The Board of Directors has voted to renegotiate my contract as Executive Director with me, but I have chosen not to participate because of concerns which would be inappropriate to enumerate herein. December 13 is my last day. Thank you for supporting me and the organization this year, and may God bless you!</td>
 
 <td></td>
 </tr>
